# better-faster-stronger-mixer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
app/: main.cpp
cmake/: Colors.cmake  Misc.cmake  Nanobench.cmake  RobinHood.cmake
include/: AllMixersWithClasses.h  BufferedWriter.h  mumxmumxx1.h  murmurhash3.h  sfc64.h
include/bitops/: bitreverse.h  mum.h  rot.h
include/constant_optimizer/: Acceptance.h  ColorTable.h  EvalBitFlipSAC.h  MarkovChainMonteCarlo.h  binomialDistribution.h  generateUniqueLowEntrophyNumbers.h  geomean.h  mutateBitFlipProbability.h  popcount.h
include/fmt/: to_hex.h
include/hasher/: mumxmumxx2.h
include/mixer/: FNV1A_Pippip.h  aes.h  crc_mul.h  ettinger_mixer.h  fnv1a_64.h  lemire_stronglyuniversal.h  mum3_mixer.h  mumx_mumx_rrxx_1.h  mumxmumxx1.h  mumxmumxx2.h  murmurhash3_fmix64.h  nasam.h  robin_hood_hash_int.h  rrmxmx.h  rrxmrrxmsx_0.h  staffort_mix13.h  twang_mix64.h  wyhash3_mix.h  xxh3_mixer.h
include/util/: umul128.h
scripts/: gen_table.rb  practrand_feeder.rb  scatterplot.plt  singlecolumn.plt  toc-insert.sh
src/: benchmark.cpp  constant_optimizer.cpp  coverage.cpp  example.cpp  practrand_feeder.cpp  randomseed.cpp  show_hash.cpp
src/constant_optimizer/: ColorTable.cpp
src/unit/: test_bitreverse.cpp
